--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -6,3 +6,7 @@ spring:
         driverClassName: org.postgresql.Driver
         username: postgres
         password: postgres
+
+aws:
+    access_key_id: ${AWS_ACCESS_KEY}
+    secret_access_key: ${AWS_SECRET_KEY}
