--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,10 +2,10 @@ spring:
     application:
         name: wuhu-server
     datasource:
-        url: jdbc:postgresql://localhost:5432/postgres?sslmode=disable
+        url: ${POSTGRES_URL}
         driverClassName: org.postgresql.Driver
-        username: postgres
-        password: postgres
+        username: ${POSTGRES_USERNAME}
+        password: ${POSTGRES_PASSWORD}
 
 aws:
     access_key_id: ${AWS_ACCESS_KEY}
