--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -15,3 +15,9 @@ spring:
 aws:
   access_key_id: ${AWS_ACCESS_KEY}
   secret_access_key: ${AWS_SECRET_KEY}
+
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
