--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fontsource/dm-sans": "^5.0.20",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
