--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@fontsource/dm-sans": "^5.0.20",
     "@hookform/resolvers": "^3.3.4",
+    "@nextui-org/avatar": "^2.0.27",
+    "@nextui-org/react": "^2.3.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-query": "^5.32.0",
