--- a/server/Taskfile.yaml
+++ b/server/Taskfile.yaml
@@ -83,4 +83,4 @@ tasks:
     desc: Run goose migration
     cmds:
       - echo "Running goose migration..."
-      - goose -dir migrations postgres "user=postgres dbname=postgres password=postgres sslmode=disable" up
+      - goose -dir migrations postgres "postgresql://postgres:postgres@localhost:5432/postgres?sslmode=disable" up
