--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@alkhipce/editorjs-aitext": "^1.2.0",
+    "@editorjs/editorjs": "^2.29.1",
+    "@editorjs/header": "^2.8.1",
     "@fontsource/dm-sans": "^5.0.20",
     "@hookform/resolvers": "^3.3.4",
     "@nextui-org/avatar": "^2.0.27",
@@ -36,6 +39,7 @@
     "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@types/editorjs__header": "^2.6.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
